--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "convex": "^1.13.0",
     "lucide-react": "^0.402.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
