--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@liveblocks/client": "^2.3.0",
+    "@liveblocks/node": "^2.3.0",
+    "@liveblocks/react": "^2.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -18,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.13.0",
+    "convex-helpers": "^0.1.48",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.402.0",
     "next": "14.2.4",
